--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.6.3",
     "vue": "^2.5.13"
   },
   "devDependencies": {
