--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
     "buefy": "^0.6.3",
     "vue": "^2.5.13"
   },
