--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
+    "axios": "^0.18.0",
     "buefy": "^0.6.3",
-    "vue": "^2.5.13"
+    "vue": "^2.5.13",
+    "vue-moment": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.1",
