--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.18.0",
     "buefy": "^0.6.3",
     "vue": "^2.5.13",
-    "vue-moment": "^3.2.0"
+    "vue-moment": "^3.2.0",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.1",
