--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/cli-plugin-eslint": "^3.0.0-beta.2",
     "@vue/cli-service": "^3.0.0-beta.2",
     "@vue/eslint-config-standard": "^3.0.0-beta.2",
+    "ajv": "^6.2.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "vue-template-compiler": "^2.5.13"
