Add "es6-promise" to support axios on IE

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
     "axios": "^0.18.0",
     "buefy": "^0.6.3",
+    "es6-promise": "^4.2.4",
     "vlightbox": "^2.0.2",
     "vue": "^2.5.13",
     "vue-infinite-loading": "^2.2.3",
