Add "vue-axios" and use API_URL

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "buefy": "^0.6.3",
     "es6-promise": "^4.2.4",
     "vue": "^2.5.13",
+    "vue-axios": "^2.0.2",
     "vue-infinite-loading": "^2.2.3",
     "vue-router": "^3.0.1",
     "vue-silentbox": "^0.1.1",
