--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "buefy": "^0.6.3",
     "es6-promise": "^4.2.4",
+    "global-package-version": "^1.1.0",
     "jwt-decode": "^2.2.0",
     "lodash.debounce": "^4.0.8",
     "vue": "^2.5.13",
