--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "global-package-version": "^1.1.0",
     "jwt-decode": "^2.2.0",
     "lodash.debounce": "^4.0.8",
+    "object-to-formdata": "^1.3.0",
     "vue": "^2.5.13",
     "vue-axios": "^2.0.2",
     "vue-infinite-loading": "^2.2.3",
