--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-router": "^3.0.1",
     "vue-silentbox": "^0.1.1",
     "vue-timeago": "^3.4.4",
+    "vue-wysiwyg": "^1.7.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
