--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "es6-promise": "^4.2.4",
     "global-package-version": "^1.1.0",
     "jwt-decode": "^2.2.0",
-    "lodash.debounce": "^4.0.8",
+    "debounce": "^1.1.0",
     "object-to-formdata": "^1.3.0",
     "vue": "^2.5.13",
     "vue-axios": "^2.0.2",
