--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "global-package-version": "^1.1.0",
     "jwt-decode": "^2.2.0",
     "object-to-formdata": "^1.3.0",
+    "uppy": "^0.23.3",
     "vue": "^2.5.13",
     "vue-axios": "^2.0.2",
     "vue-infinite-loading": "^2.2.3",
