--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/fontawesome-free-brands": "^5.0.8",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.6",
+    "actioncable": "^5.2.0",
     "axios": "^0.18.0",
     "buefy": "^0.6.3",
     "debounce": "^1.1.0",
