--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "buefy": "^0.6.3",
     "debounce": "^1.1.0",
+    "dotenv": "^5.0.1",
     "es6-promise": "^4.2.4",
     "global-package-version": "^1.1.0",
     "jwt-decode": "^2.2.0",
