:arrow_up: Upgrade "vue-timeago" to 4.0.1

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "actioncable": "^5.2.0",
     "axios": "^0.18.0",
     "buefy": "^0.6.3",
+    "date-fns": "^1.29.0",
     "debounce": "^1.1.0",
     "dotenv": "^5.0.1",
     "es6-promise": "^4.2.4",
@@ -29,7 +30,7 @@
     "vue-pell-editor": "^0.1.4",
     "vue-router": "^3.0.1",
     "vue-silentbox": "^0.1.1",
-    "vue-timeago": "^3.4.4",
+    "vue-timeago": "^4.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
