Nginx: Enable gzip

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,7 @@
+gzip on;
+gzip_disable "msie6";
+gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
+
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
