--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.6",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.6",
-    "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.6",
-    "@vue/cli-service": "^3.0.0-beta.6",
-    "@vue/eslint-config-standard": "^3.0.0-beta.6",
+    "@vue/cli-plugin-babel": "^3.0.0-rc.7",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.7",
+    "@vue/cli-plugin-unit-mocha": "^3.0.0-rc.7",
+    "@vue/cli-service": "^3.0.0-rc.7",
+    "@vue/eslint-config-standard": "^3.0.0-rc.7",
     "@vue/test-utils": "^1.0.0-beta.14",
     "chai": "^4.1.2",
     "node-sass": "^4.7.2",
