--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,16 @@ server {
 
   index index.html;
 
+  location ~ ^/(css|fonts|img|js)/ {
+    # These assets include a digest in the filename, so they will never change
+    expires max;
+  }
+
+  location ~* ^.+\.(html|htm)$ {
+    # Very short caching time to ensure changes are immediately recognized
+    expires 5m;
+  }
+
   location / {
     try_files $uri $uri/ /index.html;
   }
