FontAwesome: Use SVG icons instead of font

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ server {
 
   index index.html;
 
-  location ~ ^/(css|fonts|img|js)/ {
+  location ~ ^/(css|js)/ {
     # These assets include a digest in the filename, so they will never change
     expires max;
   }
