--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.9",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.9",
-    "@vue/cli-plugin-unit-mocha": "^3.0.0-rc.9",
-    "@vue/cli-service": "^3.0.0-rc.9",
-    "@vue/eslint-config-standard": "^3.0.0-rc.9",
+    "@vue/cli-plugin-babel": "^3.0.4",
+    "@vue/cli-plugin-eslint": "^3.0.4",
+    "@vue/cli-plugin-unit-mocha": "^3.0.4",
+    "@vue/cli-service": "^3.0.4",
+    "@vue/eslint-config-standard": "^3.0.4",
     "@vue/test-utils": "^1.0.0-beta.22",
     "chai": "^4.1.2",
     "node-sass": "^4.7.2",
