Use GitHub Package Registry to push Docker image

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,13 +9,13 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Build the production image
-        run: docker build --pull -t ${{ secrets.GITLAB_REGISTRY }}/${{ secrets.GITLAB_REPO }}:latest .
+        run: docker build --pull -t docker.pkg.github.com/ledermann/docker-vue/docker-vue:latest .
 
-      - name: Login to GitLab Docker Registry
-        run: echo ${{ secrets.GITLAB_TOKEN }} | docker login -u gitlab-ci-token --password-stdin ${{ secrets.GITLAB_REGISTRY }}
+      - name: Login to GitHub Package Registry
+        run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push the production image
-        run: docker push ${{ secrets.GITLAB_REGISTRY }}/${{ secrets.GITLAB_REPO }}:latest
+        run: docker push "docker.pkg.github.com/ledermann/docker-vue/docker-vue:latest"
 
       - name: Trigger deployment
         run: curl -X POST ${{ secrets.DEPLOY_HOOK }}
