--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,7 +12,7 @@ jobs:
         run: docker build --pull -t docker.pkg.github.com/ledermann/docker-vue/docker-vue:latest .
 
       - name: Login to GitHub Package Registry
-        run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p ${{ secrets.GITHUB_TOKEN }}
+        run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p ${{ secrets.PACKAGES_TOKEN }}
 
       - name: Push the production image
         run: docker push "docker.pkg.github.com/ledermann/docker-vue/docker-vue:latest"
