--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@vue/cli-plugin-unit-mocha": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.33",
+    "@vue/test-utils": "^1.0.0",
     "chai": "^4.1.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
